--- a/Reading_Files.mkd
+++ b/Reading_Files.mkd
@@ -1,4 +1,5 @@
- # Introduction to reading files with Python
+
+# Introduction to reading files with Python
 
 Python can use various types of data sources for analysis. One of the most common sources for data storage is through files such as 
 spreadsheets, csv , text files e.t.c. In order to manipulate the data on files, the python program first has to open, write, and read
@@ -13,7 +14,7 @@ The file path names can also be specified in the open function.. For example, op
     
 In Python, the readlines() method returns a list of strings, where the first element is the contents of the first line. You can also use the file.readline() method which returns a single line at a time, which is useful when dealing with large files where the entire file contents may not fit into the available system memory. 
 
-To close a file, you can use the close() function.
+ To close a file, you can use the close() function.
 ### code
     f = open('myfile.txt') 
     contents = f.read()  
@@ -21,9 +22,9 @@ To close a file, you can use the close() function.
 
 *Example 1: Calculating the average of data per line*
 ### code
-    f = open('mydata.txt')
+     f = open('mydata.txt')
     lines = f.readlines()
-    f.close()
+     f.close()
 
     total = 0    # Iterate over each line
     for ln in lines:
@@ -74,3 +75,17 @@ If no mode is specified, the default mode is 'r'.
 | a  |Open the file for appending. If file does not exist then the file is created. Writes are added to end of existing file contents. |
 | w  |Open the file for writing. If file does not exist then the file is created. Contents of an existing file are overwritten.|
 | r  | Open the file for reading. You are not allowed to write, overwrite file, or create missing file.|
+
+## OS Module
+In Python, the OS module provides a way of using operating system dependent functionality. The functions that the OS module provides allows you to interface with the underlying operating system that Python is running on – be that Windows, Mac or Linux. 
+
+### code
+import os
+
+# ...
+
+myfile = open('myfile.txt', 'r')
+# ...
+file_info = os.stat('myfile.txt')
+# ...
+os.remove('myfile.txt')
