--- a/Exceptions.mkd
+++ b/Exceptions.mkd
@@ -10,7 +10,7 @@ When a try is reached, the statements in the try block are executed. If no excep
        # ...Normal code that might produce erros
     except: #Go here if <i> any </i> errors occurs in try block
        # ...  Exception handing code
- * Example 1: *
+ * Example 1: 
  #### code
      user_input = ''
      while user_input != 'quit':
@@ -25,7 +25,7 @@ When a try is reached, the statements in the try block are executed. If no excep
                print('Could not calculate health info.')
        user_input = input('Enter any word (enter 'quit' to quit): ')
  
-##### You can also use exception handling with multiple try-except blocks.
+### You can also use exception handling with multiple try-except blocks.
 #### code
     user_input = ''
      while user_input != 'quit':
